src/test/deca/codegen/invalid/valiable_non_initial.deca
// Description :
//   test d'acceder a une variable non initialise

// Résultats :
///  ** IMA ** ERREUR ** Ligne 10 : 
//    WINT avec R1 indefini
{
	int x;
	print(x);
}